deploy/config/main/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: witness-it-mysql
  labels:
    app: witness-it-mysql
spec:
  ports:
    - port: 3306
      name: mysql8
      protocol: TCP
  selector:
    app: witness-it-mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: witness-it-mysql
  labels:
    app: witness-it-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: witness-it-mysql
  template:
    metadata:
      labels:
        app: witness-it-mysql
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: mysql:8.0
          name: mysql8
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: witness-it-pv
      restartPolicy: Always
      volumes:
        - name: witness-it-pv
          persistentVolumeClaim:
            claimName: witness-it-pvc
status: {}
