deploy/config/main/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: witness-it-redis
spec:
  ports:
    - port: 6379
  selector:
    app: witness-it-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: witness-it-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: witness-it-redis
  template:
    metadata:
      labels:
        app: witness-it-redis
    spec:
      containers:
        - name: witness-it-redis
          image: redis:latest
          ports:
            - containerPort: 6379
