deploy/config/main/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: witness-it-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
spec:
  tls:
    - hosts:
        - witness-it.com
      secretName: witness-it.com-production
  rules:
    - host: "witness-it.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: witness-it-app
                port:
                  number: 80
    - host: "www.witness-it.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: witness-it-app
                port:
                  number: 80

  ingressClassName: nginx
